refactor: post controller and post service